test: rename tests to improve readability